we use fastutil in this household